<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CangChuManagerActivity" >

    <com.example.common.ImageButtonTemplate
        android:id="@+id/cangChu_chuku"
        android:layout_width="110dip"
        android:layout_height="100dip"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="20dip"
        android:src="@drawable/chuku2"
        android:text="@string/icon_cangchu_chuku"
        android:textColor="#ffffff">
    </com.example.common.ImageButtonTemplate>

    <com.example.common.ImageButtonTemplate
        android:id="@+id/cangChu_tuiku"
        android:layout_width="110dip"
        android:layout_height="100dip"
         android:layout_alignTop="@+id/cangChu_chuku"
        android:layout_toRightOf="@+id/cangChu_chuku"
        android:contentDescription="@string/string_layout_shuJuUpload"
        android:src="@drawable/return2"
        android:text="@string/icon_cangchu_tuiku"
        android:textColor="#ffffff" >
    </com.example.common.ImageButtonTemplate>

     <com.example.common.ImageButtonTemplate
        android:id="@+id/cangChu_pandian"
        android:layout_width="110dip"
        android:layout_height="100dip"
        android:layout_below="@+id/cangChu_chuku"
        android:layout_alignLeft="@+id/cangChu_chuku"
        android:contentDescription="@string/string_layout_shuJuUpload"
        android:src="@drawable/pandian2"
        android:text="@string/storageScanInventoryDesc"
        android:textColor="#ffffff" >
    </com.example.common.ImageButtonTemplate>
    
       <com.example.common.ImageButtonTemplate
        android:id="@+id/cangChu_diaobo"
       android:layout_width="110dip"
        android:layout_height="100dip"
        android:layout_alignLeft="@+id/cangChu_tuiku"
        android:layout_below="@+id/cangChu_tuiku"
        android:background="#00000000"
        android:src="@drawable/diaobo2"
        android:text="@string/icon_cangchu_diaobo"
        android:textColor="#ffffff" >
    </com.example.common.ImageButtonTemplate>
    
      <com.example.common.ImageButtonTemplate
        android:id="@+id/cangChu_upload"
        android:layout_width="110dip"
        android:layout_height="100dip"
        android:layout_below="@+id/cangChu_pandian"
        android:layout_alignLeft="@+id/cangChu_pandian"
        android:contentDescription="@string/string_layout_shuJuUpload"
        android:src="@drawable/upload2"
        android:text="@string/icon_cangchu_shangchuan"
        android:textColor="#ffffff" >
    </com.example.common.ImageButtonTemplate>
    
    <com.example.common.ImageButtonTemplate
        android:id="@+id/cangchuin"
        android:layout_width="110dip"
        android:layout_height="100dip"
        android:layout_alignTop="@+id/cangChu_upload"
        android:layout_toRightOf="@+id/cangChu_upload"
        android:contentDescription="@string/string_layout_shuJuUpload"
        android:src="@drawable/zichanin2"
        android:text="@string/icon_cangchu_in"
        android:textColor="#ffffff" >
    </com.example.common.ImageButtonTemplate>
    
   <com.example.common.ImageButtonTemplate
        android:id="@+id/cangchuquery"
        android:layout_width="110dip"
        android:layout_height="100dip"
       android:layout_alignLeft="@+id/cangChu_upload"
       android:layout_below="@+id/cangChu_upload"
        android:contentDescription="@string/string_layout_shuJuUpload"
        android:src="@drawable/chaxun"
        android:text="@string/icon_cangchu_query"
        android:textColor="#ffffff" >
    </com.example.common.ImageButtonTemplate>

</RelativeLayout>