<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <!--
         <Button
        android:id="@+id/isconnectnet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFE7BA"
        android:text="当前网络不可用，是否检查当前网络设置 "
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="gone"
         android:layout_below="@+id/admin_new_questions" />
    -->

    <LinearLayout
        android:id="@+id/firstlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip"
        android:baselineAligned="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_username_text"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/login_name_text"
            android:textSize="18dip" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:paddingTop="0dip"
             />

        <TextView
            android:id="@+id/login_password_text"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/login_password_text"
            android:textSize="18dip" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="0dip"
            android:paddingTop="0dip"
            android:password="true"
             />
        <CheckBox 
            android:id="@+id/remember"
            android:layout_width="130dp"
            android:layout_height="20dp"
              android:layout_marginLeft="20dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dp"
            android:text="记住密码"/>

        <com.example.common.ImageButtonTemplate
            android:id="@+id/setIp"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-20dp"
            android:baselineAligned="true"
            android:contentDescription="@string/string_layout_cangChuManager"
            android:focusableInTouchMode="false"
            android:text="@string/string_setip_port"
            android:textSize="15dp"
            android:textColor="#ffaaee" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="260dp"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:background="#CD6839"
            android:text="@string/login_button_text"
            android:textColor="#F7FBFD" />
        
    </LinearLayout>
</RelativeLayout>